fix(css)remove width on container to hide overflow window

--- a/src/styles/layout/_desktop.scss
+++ b/src/styles/layout/_desktop.scss
@@ -20,7 +20,6 @@ main {
     }
 
     .center-text-highscore-container {
-      width: 100%;
       flex-direction: row;
       padding: 30px;
 
